[package]
name = "ssh_format"
version = "0.13.3"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Data format used to communicate with openssh mux server."
repository = "https://github.com/openssh-rust/ssh_format"

keywords = ["serde", "ssh", "serialization", "parsing", "encoding"]
categories = ["encoding"]

[features]
is_human_readable = []

[dependencies]                                    
serde = "1.0"
bytes = { version = "1.2.1", optional = true }

[dev-dependencies]                                    
serde = { version = "1.0", features = ["derive"] }
assert_matches = "1.5.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
