[package]
name = "ssh_format_error"
version = "0.1.0"
edition = "2018"

authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]

license = "MIT"
description = "Data format used to communicate with openssh mux server."
repository = "https://github.com/openssh-rust/ssh_format"

keywords = ["serde", "ssh", "serialization", "parsing", "encoding"]
categories = ["encoding"]

[dependencies]
serde = "1.0"
